Added configuration providers. todo: unit testing